# launchpad

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  style.css
src/: main.rs
src/core/: apps.rs  battery.rs  calculator.rs  config.rs  css.rs  mod.rs  notifications.rs  usage.rs  utils.rs
src/ui/: application.rs  apps.rs  battery.rs  mod.rs  notifications.rs  search.rs  text.rs  time.rs
