[package]
name = "launchpad"
version = "1.0.2"
edition = "2024"

[dependencies]
relm4 = "0.11.0"
gtk4 = "0.11.2"
gtk4-layer-shell = "0.8.0"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = { version = "0.11", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
shlex = "1.3.0"
wait-timeout = "0.2.1"
shellexpand = "3.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true